--- a/BusyIndicatorRive/package.json
+++ b/BusyIndicatorRive/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BusyIndicator",
+  "name": "BusyIndicatorRive",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -15,7 +15,8 @@
     "react": "18.1.0",
     "react-native": "0.68.2",
     "react-native-safe-area-context": "^4.3.1",
-    "react-native-screens": "^3.13.1"
+    "react-native-screens": "^3.13.1",
+    "rive-react-native": "^2.1.37"
   },
   "devDependencies": {
     "@babel/core": "7.18.2",
