--- a/BusyIndicator/package.json
+++ b/BusyIndicator/package.json
@@ -10,21 +10,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-navigation/native": "^6.0.10",
-    "@react-navigation/native-stack": "^6.6.2",
     "react": "18.1.0",
-    "react-native": "0.68.2",
-    "react-native-safe-area-context": "^4.3.1",
-    "react-native-screens": "^3.13.1"
+    "react-native": "0.70.4",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2"
   },
   "devDependencies": {
-    "@babel/core": "7.18.2",
-    "@babel/runtime": "7.18.3",
-    "@react-native-community/eslint-config": "3.0.2",
-    "babel-jest": "28.1.1",
-    "eslint": "8.17.0",
-    "jest": "28.1.1",
-    "metro-react-native-babel-preset": "0.71.1",
+    "@babel/core": "^7.20.2",
+    "@babel/runtime": "^7.20.1",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "babel-jest": "^29.2.2",
+    "eslint": "^8.26.0",
+    "jest": "^29.2.2",
+    "metro-react-native-babel-preset": "0.73.3",
     "react-test-renderer": "18.1.0"
   },
   "jest": {
