--- a/RnLottieAnimation/package.json
+++ b/RnLottieAnimation/package.json
@@ -10,26 +10,26 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-navigation/native": "^6.0.10",
-    "@react-navigation/native-stack": "^6.6.2",
-    "lottie-react-native": "^5.1.3",
-    "react": "17.0.2",
-    "react-native": "0.68.2",
+    "react": "18.1.0",
+    "react-native": "0.70.5",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "lottie-react-native": "^5.1.4",
     "react-native-elements": "^3.4.2",
-    "react-native-safe-area-context": "^4.2.5",
-    "react-native-screens": "^3.13.1",
-    "react-native-vector-icons": "^9.1.0",
-    "styled-components": "^5.3.5"
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-vector-icons": "^9.2.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "@babel/core": "7.18.5",
-    "@babel/runtime": "7.18.3",
-    "@react-native-community/eslint-config": "2.0.0",
-    "babel-jest": "26.6.3",
-    "eslint": "7.32.0",
-    "jest": "26.6.3",
-    "metro-react-native-babel-preset": "0.67.0",
-    "react-test-renderer": "17.0.2"
+    "@babel/core": "^7.20.2",
+    "@babel/runtime": "^7.20.1",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "babel-jest": "^29.2.2",
+    "eslint": "^8.27.0",
+    "jest": "^29.2.2",
+    "metro-react-native-babel-preset": "0.73.3",
+    "react-test-renderer": "18.2.0"
   },
   "jest": {
     "preset": "react-native"
