--- a/BusyIndicator/package.json
+++ b/BusyIndicator/package.json
@@ -18,6 +18,7 @@
     "react-native-screens": "^3.18.2"
   },
   "devDependencies": {
+    "prettier": "^2.7.1",
     "@babel/core": "^7.20.2",
     "@babel/runtime": "^7.20.1",
     "@react-native-community/eslint-config": "^3.2.0",
