--- a/RnLottieAnimation/package.json
+++ b/RnLottieAnimation/package.json
@@ -22,6 +22,7 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "prettier": "^2.7.1",
     "@babel/core": "^7.20.2",
     "@babel/runtime": "^7.20.1",
     "@react-native-community/eslint-config": "^3.2.0",
