--- a/RnZustand/package.json
+++ b/RnZustand/package.json
@@ -10,26 +10,27 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@freakycoder/react-native-bounceable": "^0.2.5",
-    "@react-native-async-storage/async-storage": "^1.17.7",
-    "@react-navigation/native": "^6.0.11",
-    "@react-navigation/native-stack": "^6.7.0",
-    "react": "18.2.0",
-    "react-native": "0.69.1",
-    "react-native-safe-area-context": "^4.3.1",
-    "react-native-screens": "^3.15.0",
+    "react": "18.1.0",
+    "react-native": "0.70.5",
+    "@freakycoder/react-native-bounceable": "^1.0.3",
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
     "react-native-vector-icons": "^9.2.0",
-    "zustand": "4.0.0-rc.2"
+    "zustand": "4.1.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "^7.32.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.70.3",
-    "react-test-renderer": "18.0.0"
+    "prettier": "^2.7.1",
+    "@babel/core": "^7.20.2",
+    "@babel/runtime": "^7.20.1",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "babel-jest": "^29.2.2",
+    "eslint": "^8.27.0",
+    "jest": "^29.2.2",
+    "metro-react-native-babel-preset": "0.73.3",
+    "react-test-renderer": "18.2.0"
   },
   "jest": {
     "preset": "react-native"
