--- a/BusyIndicator/package.json
+++ b/BusyIndicator/package.json
@@ -1,32 +1,39 @@
 {
   "name": "BusyIndicator",
-  "version": "0.0.1",
+  "version": "1.0.2",
   "private": true,
+  "author": "Gerardo Tovar Barragan",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint ."
+    "test": "jest"
   },
   "dependencies": {
-    "react": "18.1.0",
-    "react-native": "0.70.4",
-    "@react-navigation/native": "^6.0.13",
-    "@react-navigation/native-stack": "^6.9.1",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2"
+    "react": "18.2.0",
+    "react-native": "0.71.2",
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native-stack": "^6.9.9",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.19.0"
   },
   "devDependencies": {
-    "prettier": "^2.7.1",
-    "@babel/core": "^7.20.2",
-    "@babel/runtime": "^7.20.1",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/runtime": "^7.20.13",
     "@react-native-community/eslint-config": "^3.2.0",
-    "babel-jest": "^29.2.2",
-    "eslint": "^8.26.0",
-    "jest": "^29.2.2",
-    "metro-react-native-babel-preset": "0.73.3",
-    "react-test-renderer": "18.1.0"
+    "@tsconfig/react-native": "^2.0.3",
+    "@types/jest": "^29.4.0",
+    "@types/react": "^18.0.27",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.4.1",
+    "eslint": "^8.33.0",
+    "jest": "^29.4.1",
+    "metro-react-native-babel-preset": "0.75.0",
+    "prettier": "^2.8.3",
+    "react-test-renderer": "18.2.0",
+    "typescript": "4.9.5"
   },
   "jest": {
     "preset": "react-native"
