--- a/BusyIndicatorRive/package.json
+++ b/BusyIndicatorRive/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "BusyIndicator",
+  "name": "BusyIndicatorRive",
   "version": "1.0.2",
   "private": true,
+  "author": "Gerardo Tovar Barragan",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
